--- a/index.html
+++ b/index.html
@@ -99,11 +99,19 @@
                 <h2 class="section_title">Cardápio</h2>
                 <h3 class="section_subtitle">Pratos dos pratos</h3>
                 <div id="dishes">
-                    
+                    <div class="dish_heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img
+                        src="src/img/sorvete-brasileiro-de-acai-congelado-em-copo-plastico-com-camadas-de-flocos-de-aveia-morangos-e-mirtilos-no-fundo-vista-frontal-do-menu-de-verao_317399-840.jpg"
+                        alt=""
+                    />
+                    <h3 class="dish_title">titulo21</h3>
+                    <span class="dish_description">d2d2d2dd2d22d</span>
                 </div>
             </section>
         </main>
 
-        <script src="src/javascript/script.js"></script>
+        <script src="src/javascript/script.js" class="dish_heart"></script>
     </body>
 </html>
