--- a/index.html
+++ b/index.html
@@ -3,28 +3,58 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="src/styles/styles.css">
-        <link  rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-        
-        <title>+Açai</title>
+        <link rel="stylesheet" href="src/styles/styles.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        />
+        <title>+gostoso</title>
     </head>
     <body>
-        <nav>
-            <div class="nav_header">
+        <header>
+            <div class="nav_bar">
                 <div class="nav_logo">
-                    <a href="#"><img src="src/img/logo.png" alt="Logo Açai +Gostoso"> </a>
+                    <a href="#"
+                        ><img
+                            src="src/img/logo.png"
+                            alt="logo mais gostoso açai"
+                    /></a>
+
+                    </div>
+                    <ul class="nav_ul">
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Home</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Home</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Home</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Home</a>
+                        </li>
+                    </ul>
+                    <div class="btn_menu"><i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
-                <div class="nav_menu_btn">
-                    <span><i class="fa-solid fa-bars"></i></span>
+                
+                <div class="drop_menu">
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
                 </div>
-            </div>
-            <ul class="nav_links">
-                <li><a href="#home">home</a></li>
-                <li><a href="#home">home</a></li>
-                <li><a href="#home">home</a></li>
-                <li><a href="#home">home</a></li>
-            </ul>
-        </nav>
+        </header>
+
+        <script src="src/javascript/script.js"></script>
     </body>
 </html>
