--- a/index.html
+++ b/index.html
@@ -19,41 +19,60 @@
                             src="src/img/logo.png"
                             alt="logo mais gostoso açai"
                     /></a>
+                </div>
+                <ul class="nav_ul">
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">Home</a>
+                    </li>
+                </ul>
+                <div class="btn_menu"><i class="fa-solid fa-bars"></i></div>
+            </div>
 
-                    </div>
-                    <ul class="nav_ul">
-                        <li class="nav_item">
-                            <a href="#" class="nav_link">Home</a>
-                        </li>
-                        <li class="nav_item">
-                            <a href="#" class="nav_link">Home</a>
-                        </li>
-                        <li class="nav_item">
-                            <a href="#" class="nav_link">Home</a>
-                        </li>
-                        <li class="nav_item">
-                            <a href="#" class="nav_link">Home</a>
-                        </li>
-                    </ul>
-                    <div class="btn_menu"><i class="fa-solid fa-bars"></i>
-                    </div>
-                </div>
-                
-                <div class="drop_menu">
-                    <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
-                    </li>
-                </div>
+            <div class="drop_menu">
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Home</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Home</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Home</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Home</a>
+                </li>
+            </div>
         </header>
+
+        <main class="section_container main_container" id="home">
+            <div class="main_img">
+                <img src="src/img/face.png" alt="" />
+            </div>
+            <div class="main_content">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p class="section_description">
+                    consectetur adipisicing elit. Non voluptate libero quasi
+                    odit, explicabo architecto saepe placeat est eligendi beatae
+                    voluptatum nostrum, error deserunt. Facere quos molestias
+                    atque officiis nobis
+                </p>
+                <div class="main_btn">
+                    <button class="btn">+55551234-5678</button>
+                </div>
+                <div class="main_imgdown">
+                    <img src="src/img/face.png" alt="" />
+                </div>
+            </div>
+        </main>
 
         <script src="src/javascript/script.js"></script>
     </body>
