--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     atque officiis nobis
                 </p>
                 <div class="main_btn">
-                    <button class="btn">+55551234-5678</button>
+                   <a href="youtube.com/darkrtm" target="_blank"><button class="btn">+55551234-5678</button></a>
                 </div>
                 <div class="main_imgdown">
                     <img src="src/img/face.png" alt="" />
