--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <ul class="nav_ul">
                     <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
+                        <a href="#" class="nav_link active">Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#" class="nav_link">Home</a>
@@ -55,7 +55,7 @@
 
         <main class="section_container main_container" id="home">
             <div class="main_img">
-                <img src="src/img/face.png" alt="" />
+                <img src="src/img/Main.png" alt="" />
             </div>
             <div class="main_content">
                 <h1>Lorem ipsum dolor sit amet.</h1>
@@ -66,13 +66,28 @@
                     atque officiis nobis
                 </p>
                 <div class="main_btn">
-                   <a href="youtube.com/darkrtm" target="_blank"><button class="btn">+55551234-5678</button></a>
-                </div>
-                <div class="main_imgdown">
-                    <img src="src/img/face.png" alt="" />
+                    <a href="https://www.whatsapp.com/" target="_blank"
+                        ><button class="btn">+55551234-5678</button></a
+                    >
                 </div>
             </div>
         </main>
+
+        <section class="section_serve">
+            <div class="serve_container">
+                <div class="section-data">
+                    <span class="serve_title">Lorem ipsum dolor<span>
+                    <h2 class="serve_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                </div>
+                <div class="card_group d-grid">
+                    <div class="card">
+                        <div class="card_header">
+                            <img src="src/img/delivery.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="src/javascript/script.js"></script>
     </body>
