--- a/index.html
+++ b/index.html
@@ -84,7 +84,33 @@
                         <div class="card_header">
                             <img src="src/img/delivery.png" alt="">
                         </div>
+                        <div class="card_body">
+                            <h3 class="card_title" title="">Entrega rapida</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        </div>
                     </div>
+
+                    <div class="card">
+                        <div class="card_header">
+                            <img src="src/img/delivery.png" alt="">
+                        </div>
+                        <div class="card_body">
+                            <h3 class="card_title" title="">Entrega rapida</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="card_header">
+                            <img src="src/img/delivery.png" alt="">
+                        </div>
+                        <div class="card_body">
+                            <h3 class="card_title" title="">Entrega rapida</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
