--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
         <section class="section_serve">
             <div class="serve_container">
-                <div class="section-data">
-                    <span class="serve_title">Lorem ipsum dolor<span>
+                <div class="section_data">
+                    <span class="serve_title">Lorem ipsum dolor</span>
+
                     <h2 class="serve_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
                 <div class="card_group d-grid">
