--- a/index.html
+++ b/index.html
@@ -73,45 +73,43 @@
             </div>
         </main>
 
-        <section class="section_serve">
-            <div class="serve_container">
-                <div class="section_data">
-                    <span class="serve_title">Lorem ipsum dolor</span>
+        <section class="what-we-serve">
+            <div class="container1">
+                <div class="section-metadata">
+                    <span class="section-tagline">what dp p whhat</span>
 
-                    <h2 class="serve_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                    <h2 class="title section-title">
+                        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h2>
                 </div>
-                <div class="card_group d-grid">
+
+                <div class="card-group d-grid">
                     <div class="card">
-                        <div class="card_header">
-                            <img src="src/img/delivery.png" alt="">
+                        <div class="card-header">
+                            <img src="" alt="" />
                         </div>
-                        <div class="card_body">
-                            <h3 class="card_title" title="">Entrega rapida</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        <div class="card-body">
+                            <h3 class="title card-tittle"></h3>
+                            <p>12312 d qd qdqdqdqd qd</p>
                         </div>
                     </div>
-
                     <div class="card">
-                        <div class="card_header">
-                            <img src="src/img/delivery.png" alt="">
+                        <div class="card-header">
+                            <img src="" alt="" />
                         </div>
-                        <div class="card_body">
-                            <h3 class="card_title" title="">Entrega rapida</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        <div class="card-body">
+                            <h3 class="title card-tittle"></h3>
+                            <p>12312 d qd qdqdqdqd qd</p>
                         </div>
                     </div>
-
-
                     <div class="card">
-                        <div class="card_header">
-                            <img src="src/img/delivery.png" alt="">
+                        <div class="card-header">
+                            <img src="" alt="" />
                         </div>
-                        <div class="card_body">
-                            <h3 class="card_title" title="">Entrega rapida</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime nam animi quis minima provident sed excepturi, nemo commodi labore esse! Ea quos </p>
+                        <div class="card-body">
+                            <h3 class="title card-tittle"></h3>
+                            <p>12312 d qd qdqdqdqd qd</p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
