--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
         <section class="what-we-serve">
             <div class="container1">
                 <div class="section-metadata">
-                    <span class="section-tagline">what dp p whhat</span>
+                    <span class="section-tagline">Saiba mais </span>
 
+                    
                     <h2 class="title section-title">
-                        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h2>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h2>
                 </div>
 
                 <div class="card-group d-grid">
@@ -88,26 +89,26 @@
                             <img src="src/img/delivery.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle"></h3>
-                            <p>12312 d qd qdqdqdqd qd</p>
+                            <h3 class="title card-tittle">Lorem ipsum dolor sit amet</h3>
+                            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <img src="src/img/delivery.png" alt="" />
+                            <img src="src/img/Corpos.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle"></h3>
-                            <p>12312 d qd qdqdqdqd qd</p>
+                            <h3 class="title card-tittle">Lorem ipsum dolor </h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur aipisicing elit. Magni</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <img src="src/img/delivery.png" alt="" />
+                            <img src="src/img/desconto.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle"></h3>
-                            <p>12312 d qd qdqdqdqd qd</p>
+                            <h3 class="title card-tittle">Lorem ipsum dolor sit amet</h3>
+                            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
                 </div>
