--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <main class="section_container main_container" id="home">
             <div class="main_img">
-                <img src="src/img/Main.png" alt="" />
+                <img src="src/img/main2.png" alt="" />
             </div>
             <div class="main_content">
                 <h1>Lorem ipsum dolor sit amet.</h1>
