--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         </header>
 
         <main class="section_container main_container" id="home">
+            
+            <div class="shape"></div>
+
+
             <div class="main_img">
                 <img src="src/img/main2.png" alt="" />
             </div>
@@ -78,9 +82,10 @@
                 <div class="section-metadata">
                     <span class="section-tagline">Saiba mais </span>
 
-                    
                     <h2 class="title section-title">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h2>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.
+                    </h2>
                 </div>
 
                 <div class="card-group d-grid">
@@ -89,8 +94,13 @@
                             <img src="src/img/delivery.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle">Lorem ipsum dolor sit amet</h3>
-                            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+                            <h3 class="title card-tittle">
+                                Lorem ipsum dolor sit amet
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet Lorem ipsum dolor sit
+                                amet
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -98,8 +108,11 @@
                             <img src="src/img/Corpos.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle">Lorem ipsum dolor </h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur aipisicing elit. Magni</p>
+                            <h3 class="title card-tittle">Lorem ipsum dolor</h3>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur
+                                aipisicing elit. Magni
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -107,8 +120,13 @@
                             <img src="src/img/desconto.png" alt="" />
                         </div>
                         <div class="card-body">
-                            <h3 class="title card-tittle">Lorem ipsum dolor sit amet</h3>
-                            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+                            <h3 class="title card-tittle">
+                                Lorem ipsum dolor sit amet
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet Lorem ipsum dolor sit
+                                amet
+                            </p>
                         </div>
                     </div>
                 </div>
