--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
         </header>
 
         <main class="section_container main_container" id="home">
-            
-            <div class="shape"></div>
-
-
             <div class="main_img">
                 <img src="src/img/main2.png" alt="" />
             </div>
@@ -128,6 +124,20 @@
                                 amet
                             </p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="menu">
+            <h2 class="section-title">cardapio</h2>
+            <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+            <div id="dishes">
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+
                     </div>
                 </div>
             </div>
