--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
                 <div class="dish">
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
-
                     </div>
+
+                    <img src="src/img/Png1.png" alt="">
                 </div>
             </div>
         </section>
