--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </section>
 
         <section id="menu">
-            <h2 class="section-title">cardapio</h2>
+            <h2 class="section-title1">cardapio</h2>
             <h3 class="section-subtitle">Nossos pratos especiais</h3>
 
             <div id="dishes">
@@ -139,7 +139,45 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/img/Png1.png" alt="">
+                    <img src="src/img/Png1.png" alt="" />
+                    <h3 class="dish-title">Lorem ipsum doloron!</h3>
+                    <span class="dish-description"
+                        >Lorem ipsum dolor sit amet consectetur ?</span
+                    >
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>500+</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$20,00</h4>
+                        
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/img/Png1.png" alt="" />
+                    <h3 class="dish-title">Lorem ipsum doloron!</h3>
+                    <span class="dish-description"
+                        >Lorem ipsum dolor sit amet consectetur ?</span
+                    >
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>500+</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$20,00</h4>
+                        
+                    </div>
                 </div>
             </div>
         </section>
