--- a/index.html
+++ b/index.html
@@ -121,12 +121,23 @@
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit amet Lorem ipsum dolor sit
-                                amet </p>
+                                amet
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="about" id="about">
+            <div class="about-img"><img src="src/img/about.png" alt=""></div>
+            <div class="about-text">
+                <h2>Lorem ipsum dolor, sit amet</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim modi autem, dignissimos suscipit libero ratione reprehenderit in debitis dolor aliquid temporibus. Provident ducimus unde, tempora eligendi deserunt reprehenderit nemo? Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> <br>
+                Ea deserunt, culpa quam repellat explicabo et officiis facere, quasi magnam eveniet fugit sequi id enim fuga consequuntur illo quibusdam vitae rem!</p>
+            </div>
+        </section>
+
 
         <section id="menu">
             <h2 class="section-title1">cardapio</h2>
@@ -193,8 +204,6 @@
                         <h4>R$20,00</h4>
                     </div>
                 </div>
-
-                
             </div>
         </section>
 
