--- a/index.html
+++ b/index.html
@@ -22,19 +22,24 @@
                 </div>
                 <ul class="nav_ul">
                     <li class="nav_item">
-                        <a href="#" class="nav_link active">Home</a>
+                        <a href="#" class="nav_link active">Início</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
+                        <a href="#service" class="nav_link">Serviços</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
+                        <a href="#about" class="nav_link">Sobre</a>
                     </li>
+
+
                     <li class="nav_item">
-                        <a href="#" class="nav_link">Home</a>
+                        <a href="#" class="nav_link">Avaliações</a>
                     </li>
                 </ul>
                 <div class="btn_menu"><i class="fa-solid fa-bars"></i></div>
+                <a href="#dishes"
+                        ><button class="btn-menu">Cardápio</button></a
+                    >
             </div>
 
             <div class="drop_menu">
@@ -73,13 +78,13 @@
             </div>
         </main>
 
-        <section class="what-we-serve">
+        <section class="what-we-serve" id="service">
             <div class="container1">
                 <div class="section-metadata">
-                    <span class="section-tagline">Saiba mais </span>
+                    <span class="section-tagline">Serviços</span>
 
                     <h2 class="title section-title">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        Lorem sectetur adipisicing
                         elit.
                     </h2>
                 </div>
@@ -158,20 +163,10 @@
                     <div class="dish-price">
                         <h4>R$20,00</h4>
                     </div>
-                </div>
-
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-
-                    <img src="src/img/copo.png" alt="" class="dish-image" />
-                    <h3 class="dish-title">Lorem ipsum doloron!</h3>
-                    <span class="dish-description"
-                        >Lorem ipsum dolor sit amet consectetur ?</span
-                    >
-                    <div class="dish-price">
-                        <h4>R$20,00</h4>
+                    <div class="main_btn">
+                        <a href="https://www.whatsapp.com/" target="_blank"
+                            ><button class="btn">PEÇA JÁ</button></a
+                        >
                     </div>
                 </div>
 
@@ -188,6 +183,11 @@
                     <div class="dish-price">
                         <h4>R$20,00</h4>
                     </div>
+                    <div class="main_btn">
+                        <a href="https://www.whatsapp.com/" target="_blank"
+                            ><button class="btn">PEÇA JÁ</button></a
+                        >
+                    </div>
                 </div>
 
                 <div class="dish">
@@ -202,6 +202,31 @@
                     >
                     <div class="dish-price">
                         <h4>R$20,00</h4>
+                    </div>
+                    <div class="main_btn">
+                        <a href="https://www.whatsapp.com/" target="_blank"
+                            ><button class="btn">PEÇA JÁ</button></a
+                        >
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+
+                    <img src="src/img/copo.png" alt="" class="dish-image" />
+                    <h3 class="dish-title">Lorem ipsum doloron!</h3>
+                    <span class="dish-description"
+                        >Lorem ipsum dolor sit amet consectetur ?</span
+                    >
+                    <div class="dish-price">
+                        <h4>R$20,00</h4>
+                    </div>
+                    <div class="main_btn">
+                        <a href="https://www.whatsapp.com/" target="_blank"
+                            ><button class="btn">PEÇA JÁ</button></a
+                        >
                     </div>
                 </div>
             </div>
