--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="card-group d-grid">
-                    <div class="card">
+                    <div class="card" id="card-one">
                         <div class="card-header">
                             <img src="src/img/delivery.png" alt="" />
                         </div>
@@ -111,7 +111,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="card-two">
                         <div class="card-header">
                             <img src="src/img/Corpos.png" alt="" />
                         </div>
@@ -123,7 +123,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="card-three">
                         <div class="card-header">
                             <img src="src/img/desconto.png" alt="" />
                         </div>
