--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <ul class="nav_ul">
                     <li class="nav_item  ">
-                        <a href="#inicio" class="nav_link">Início</a>
+                        <a href="#home" class="nav_link active">Início</a>
                     </li> 
                     <li class="nav_item">
                         <a href="#service" class="nav_link">Serviços</a>
@@ -42,7 +42,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="#cardapio" class="nav_link">Cardápio</a>
+                        <a href="#review" class="nav_link">Avaliações</a>
                     </li>
 
                 </ul>
@@ -69,8 +69,8 @@
         <!-- End NavBar -->
 
         <!-- Main -->
-
-        <main class="section_container main_container" id="inicio" >
+        <section id="home">
+        <main class="section_container main_container">
             <div class="main_img"id="home">
                 <img  src="src/img/main2.png" alt="" /></div>
                 <div class="main_content">
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </main>
-
+    </section>
         <!-- End Main -->
 
         <!-- Services -->
@@ -297,6 +297,24 @@
         </section>
 
         <!-- End Reviews -->
+
+        <footer>
+        <div class="footer-container">
+            <div class="social-media">
+                <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> </a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> </a> 
+                <a href="https://www.x.com" target="_blank"><i class="fa-brands fa-twitter"></i> </a>
+                <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> </a>
+            </div>
+
+
+            <div class="footer-bottom">
+                <p>&copy2024 Açai</p>
+            </div>
+
+        </div>
+        </footer>
 
         <script src="src/javascript/script.js"></script>
     </body>
