--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <ul class="nav_ul">
                     <li class="nav_item  ">
-                        <a href="#home" class="nav_link active">Início</a>
+                        <a href="#homea" class="nav_link active">Início</a>
                     </li> 
                     <li class="nav_item">
                         <a href="#service" class="nav_link">Serviços</a>
@@ -69,7 +69,7 @@
         <!-- End NavBar -->
 
         <!-- Main -->
-        <section id="home">
+        <section id="homea">
         <main class="section_container main_container">
             <div class="main_img"id="home">
                 <img  src="src/img/main2.png" alt="" /></div>
