--- a/index.html
+++ b/index.html
@@ -51,18 +51,25 @@
                 </div>
 
             <div class="drop_menu">
+                <li class="nav_item  ">
+                    <a href="#homea" class="nav_link active">Início</a>
+                </li> 
                 <li class="nav_item">
-                    <a href="#" class="nav_link">Home</a>
+                    <a href="#service" class="nav_link">Serviços</a>
                 </li>
                 <li class="nav_item">
-                    <a href="#" class="nav_link">Home</a>
+                    <a href="#about" class="nav_link">Sobre</a>
                 </li>
+
                 <li class="nav_item">
-                    <a href="#" class="nav_link">Home</a>
+                    <a href="#cardapio" class="nav_link">Cardápio</a>
                 </li>
+
                 <li class="nav_item">
-                    <a href="#" class="nav_link">Home</a>
+                    <a href="#review" class="nav_link">Avaliações</a>
                 </li>
+                <a href="#"><button class="btn-menu">Peça aqui</button></a>
+                    <div class="btn_menu"><i class="fa-solid fa-bars"></i></div>
             </div>
         </header>
 
