--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
                 </ul>
                     <a href="#"><button class="btn-menu">Peça aqui</button></a>
-                    <div class="btn_menu"><i class="fa-solid fa-bars"></i></div>
+                    <div class="btn_menu"><i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
 
             <div class="drop_menu">
